--- a/src/consultsPages/home_User/home_User.html
+++ b/src/consultsPages/home_User/home_User.html
@@ -58,14 +58,18 @@
           <h5>ESPECIALIDADES</h5>
         </div>
       </div>
-      <a href="../../loginPage/Login.html"></a>
-      <div class="btn_marcar">
+      <div class="pai" onclick="toggleMenu()">
+        <div class="filha"></div>
+        <div class="filha"></div>
+        <div class="filha"></div>
+      </div>      
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)">Fechar Menu</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
         </div>
-        <div class="pai" onclick="menu()">
-          <div class="filha"></div>
-          <div class="filha"></div>
-          <div class="filha"></div>
-        </div>
+      </div>        
       </div>
     </div>
 
