--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -60,55 +60,60 @@
           <h5>ESPECIALIDADES</h5>
         </div>
       </div>
-      <a href="../../loginPage/Login.html"></a>
-      <div class="btn_marcar">
-        <div class="btn_marcarConsulta"></div>
-      </div>
-      <div class="pai" onclick="menu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
-      </div>
+      </div>      
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)">Fechar Menu</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div> 
     </div>
 
-    <h1>Minha conta:</h1>
     <div id="Container">
-      <div class="Main-box">
-        <div class="box-1">
-          <div class="consultas">
-            <div class="texto-box">
-              <h2>Consultas marcadas:</h2>
+      <div class="C-mainBox">
+        <h1>Minha conta:</h1>
+        <div class="Main-box">
+          <div class="box-1">
+            <div class="consultas">
+              <div class="texto-box">
+                <h2>Consultas marcadas:</h2>
+              </div>
             </div>
+            <h3>Agendamento:</h3>
+            <label for="">Data:</label>
+            <p>dd/mm/aaaa</p>
+            <label for="">Profissional:</label>
+            <p>.....</p>
+            <label for=""></label>
+            <h3>PACIENTE:</h3>
+            <label for="">Nome:</label>
+            <p>Fulano de tal</p>
+            <label for="">RG:</label>
+            <p>********</p>
           </div>
-          <h3>Agendamento:</h3>
-          <label for="">Data:</label>
-          <p>dd/mm/aaaa</p>
-          <label for="">Profissional:</label>
-          <p>.....</p>
-          <label for=""></label>
-          <h3>PACIENTE:</h3>
-          <label for="">Nome:</label>
-          <p>Fulano de tal</p>
-          <label for="">RG:</label>
-          <p>********</p>
-        </div>
-        <div class="box-2">
-          <div class="consultas">
-            <div class="texto-box">
-              <h2>Consultas marcadas:</h2>
+          <div class="box-2">
+            <div class="consultas">
+              <div class="texto-box">
+                <h2>Consultas marcadas:</h2>
+              </div>
             </div>
+            <h3>Agendamento:</h3>
+            <label for="">Data:</label>
+            <p>dd/mm/aaaa</p>
+            <label for="">Profissional:</label>
+            <p>.....</p>
+            <label for=""></label>
+            <h3>PACIENTE:</h3>
+            <label for="">Nome:</label>
+            <p>Fulano de tal</p>
+            <label for="">RG:</label>
+            <p>********</p>
           </div>
-          <h3>Agendamento:</h3>
-          <label for="">Data:</label>
-          <p>dd/mm/aaaa</p>
-          <label for="">Profissional:</label>
-          <p>.....</p>
-          <label for=""></label>
-          <h3>PACIENTE:</h3>
-          <label for="">Nome:</label>
-          <p>Fulano de tal</p>
-          <label for="">RG:</label>
-          <p>********</p>
         </div>
       </div>
     </div>
