--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -55,12 +55,7 @@
         </div>
       </div>
       <div class="btn_marcar">
-        <div class="btn_marcarConsulta">
-          <button id="btn_Consult">
-            MARQUE SUA <br />
-            CONSULTA
-          </button>
-        </div>
+        <div class="btn_marcarConsulta"></div>
       </div>
       <div class="pai" onclick="abrirMenu()">
         <div class="filha"></div>
@@ -95,6 +90,8 @@
             placeholder="Confirme sua senha:"
           />
         </div>
+        <a href="../loginPage/Login.html">Já tem uma conta ? Faça login !</a>
+
         <input type="submit" name="btn" id="btn" value="CADASTRAR" />
       </form>
     </div>
