--- a/src/loginPage/Login.html
+++ b/src/loginPage/Login.html
@@ -55,12 +55,7 @@
         </div>
       </div>
       <div class="btn_marcar">
-        <div class="btn_marcarConsulta">
-          <button id="btn_Consult">
-            MARQUE SUA <br />
-            CONSULTA
-          </button>
-        </div>
+        <div class="btn_marcarConsulta"></div>
       </div>
       <div class="pai" onclick="abrirMenu()">
         <div class="filha"></div>
@@ -79,8 +74,8 @@
       </div>
     </div>
 
-    <div id="Container">
-      <form id="Formulario" onsubmit="verificarCredenciais(event)">
+    <div id="form-container">
+      <form id="login-form" onsubmit="verificarCredenciais(event)">
         <!-- LEAGUE SPARTAN -->
         <h2 id="login">FAÇA SEU LOGIN</h2>
         <div class="icons">
@@ -103,20 +98,14 @@
             required
           />
         </div>
-        <a
-          id="animation"
-          href="../singUpPage/singUp.html"
-          name="animation"
-          onclick="Flip()"
-          >Ainda não se inscreveu ?</a
-        >
+        <a href="../singUpPage/singUp.html">Ainda não se inscreveu ?</a>
+
         <input type="submit" name="btn" id="btn" value="ENTRAR" />
       </form>
     </div>
 
     <div id="imagem"></div>
 
-    <script src="scripts_login.js"></script>
     <!-- test -->
     <footer>
       <img src="../../assets/Mais Brasil Logo.png" alt="" />
@@ -158,5 +147,6 @@
         </div>
       </div>
     </footer>
+    <script src="scripts_login.js"></script>
   </body>
 </html>
