--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -86,7 +86,7 @@
           <input
             type="password"
             name="password"
-            id="password"
+            id="passwordConfirm"
             placeholder="Confirme sua senha:"
           />
         </div>
