--- a/src/consultsPages/minhaConta/minhaConta.html
+++ b/src/consultsPages/minhaConta/minhaConta.html
@@ -67,11 +67,19 @@
       </div>      
       <div id="menu-lateral">
         <div>
-          <a href="#" onclick="toggleMenu(false)">Fechar Menu</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="#"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="#"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
-      </div> 
+      </div>
     </div>
 
     <div id="Container">
@@ -79,24 +87,6 @@
         <h1>Minha conta:</h1>
         <div class="Main-box">
           <div class="box-1">
-            <div class="consultas">
-              <div class="texto-box">
-                <h2>Consultas marcadas:</h2>
-              </div>
-            </div>
-            <h3>Agendamento:</h3>
-            <label for="">Data:</label>
-            <p>dd/mm/aaaa</p>
-            <label for="">Profissional:</label>
-            <p>.....</p>
-            <label for=""></label>
-            <h3>PACIENTE:</h3>
-            <label for="">Nome:</label>
-            <p>Fulano de tal</p>
-            <label for="">RG:</label>
-            <p>********</p>
-          </div>
-          <div class="box-2">
             <div class="consultas">
               <div class="texto-box">
                 <h2>Consultas marcadas:</h2>
