--- a/src/crudMED/crud_MED.html
+++ b/src/crudMED/crud_MED.html
@@ -81,7 +81,7 @@
           <input type="submit" form="Crud" id="btn_ADICIONAR" value="+ ADICIONAR">
       </div>
         <div class="crud-MED">
-          <form id="Crud" method="POST" action="">
+          <form id="Crud" method="POST">
             <table class="table">
               <tr id="mains-tr">
                 <td>CPF</td>
