--- a/src/consultsPages/professional_User/professional_User.html
+++ b/src/consultsPages/professional_User/professional_User.html
@@ -67,9 +67,17 @@
       </div>
       <div id="menu-lateral">
         <div>
-          <a href="#" onclick="toggleMenu(false)">Fechar Menu</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="#"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="#"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
