--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -57,10 +57,25 @@
       <div class="btn_marcar">
         <div class="btn_marcarConsulta"></div>
       </div>
-      <div class="pai" onclick="abrirMenu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
+      </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="#"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="#"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
       </div>
     </div>
 
