--- a/src/Configuracao/alterarDados/loggout/index.html
+++ b/src/Configuracao/alterarDados/loggout/index.html
@@ -70,8 +70,8 @@
         </div>
       </div>
       <div class="boxs">
-        <button>ALTERAR DADOS</button>
-        <button>SAIR DA CONTA</button>
+        <button id="alterarDados">ALTERAR DADOS</button>
+        <button id="sairDaConta">SAIR DA CONTA</button>
       </div>
     </div>
 
