--- a/src/laddingPAGE/Ladding.html
+++ b/src/laddingPAGE/Ladding.html
@@ -31,6 +31,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -62,17 +68,33 @@
           </button>
         </div>
       </div>
-      <div class="pai" onclick="menu()">
+      <div class="pai" onclick="toggleMenu()">
         <div class="filha"></div>
         <div class="filha"></div>
         <div class="filha"></div>
+      </div>
+      <div id="menu-lateral">
+        <div>
+          <a href="#" onclick="toggleMenu(false)"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
+          /></a>
+          <hr />
+          <a href="#"><strong>Sobre nós</strong></a>
+          <hr />
+          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <hr />
+          <a href="#"><strong>Contato</strong></a>
+          <hr />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
+        </div>
       </div>
     </div>
 
     <div id="Container">
       <div class="img">
         <img
-          src="https://img.freepik.com/psd-gratuitas/modelo-de-poster-medico-de-saude_23-2148940481.jpg?w=2000"
+          src="../../assets/imagem com texto carrossel 1 (1).png"
+          style="height: 70.5vh; width: 100%; opacity: calc(95%);"
           alt=""
         /><br />
       </div>
@@ -86,10 +108,22 @@
         <h4>Mais de 10 especialidades</h4>
       </div>
       <div class="boxs">
-        <button>CLINICO GERAL</button>
-        <button>PEDIATRIA</button><br /><br />
-        <button>NUTRIÇÃO</button>
-        <button>GINECOLOGIA</button>
+        <button><span class="material-symbols-outlined">
+          stethoscope
+          </span><br />
+          CLINICO GERAL</button>
+        <button><span class="material-symbols-outlined">
+          child_care
+          </span><br />
+          PEDIATRIA</button><br /><br />
+        <button><span class="material-symbols-outlined">
+          nutrition
+          </span><br/>
+            NUTRIÇÃO</button>
+        <button><span class="material-symbols-outlined">
+          woman
+          </span><br />
+          GINECOLOGIA</button>
       </div>
     </div>
 
