--- a/src/laddingPAGE/Ladding.html
+++ b/src/laddingPAGE/Ladding.html
@@ -37,6 +37,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -108,22 +113,63 @@
         <h4>Mais de 10 especialidades</h4>
       </div>
       <div class="boxs">
-        <button><span class="material-symbols-outlined">
-          stethoscope
-          </span><br />
-          CLINICO GERAL</button>
-        <button><span class="material-symbols-outlined">
-          child_care
-          </span><br />
-          PEDIATRIA</button><br /><br />
-        <button><span class="material-symbols-outlined">
-          nutrition
-          </span><br/>
-            NUTRIÇÃO</button>
-        <button><span class="material-symbols-outlined">
-          woman
-          </span><br />
-          GINECOLOGIA</button>
+        <div class="carrossel">
+          <div class="session-1">
+            <button><span class="material-symbols-outlined">
+              stethoscope
+              </span><br />
+              CLINICO GERAL</button>
+            <button><span class="material-symbols-outlined">
+              child_care
+              </span><br />
+              PEDIATRIA</button><br /><br />
+            <button><span class="material-symbols-outlined">
+              nutrition
+              </span><br/>
+                NUTRIÇÃO</button>
+            <button><span class="material-symbols-outlined">
+              woman
+              </span><br />
+              GINECOLOGIA</button>
+          </div>
+          <div class="session-2">
+            <button><span class="material-symbols-outlined">
+              stethoscope
+              </span><br />
+              OFTAMOLOGIA </button>
+            <button><span class="material-symbols-outlined">
+              child_care
+              </span><br />
+              NEUROCIRURGIA</button><br /><br />
+            <button><span class="material-symbols-outlined">
+              nutrition
+              </span><br/>
+               PSIQUIATRIA</button>
+            <button><span class="material-symbols-outlined">
+              woman
+              </span><br />
+              UROLOGIA</button>
+          </div>
+          <div class="session-3">
+            <button><span class="material-symbols-outlined">
+              stethoscope
+              </span><br />
+              CARDIOLOGIA</button>
+            <button><span class="material-symbols-outlined">
+              child_care
+              </span><br />
+              ALERGOLOGIA</button><br /><br />
+            <button><span class="material-symbols-outlined">
+              nutrition
+              </span><br/>
+               GASTRO<br />ENTEROLOGIA</button>
+            <button><span class="material-symbols-outlined">
+              woman
+              </span><br />
+              DERMATOLOGISTA</button>
+          </div>
+        </div>
+
       </div>
     </div>
 
