--- a/src/laddingPAGE/Ladding.html
+++ b/src/laddingPAGE/Ladding.html
@@ -115,61 +115,66 @@
       <div class="boxs">
         <div class="carrossel">
           <div class="session-1">
-            <button><span class="material-symbols-outlined">
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
               stethoscope
               </span><br />
               CLINICO GERAL</button>
-            <button><span class="material-symbols-outlined">
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
               child_care
               </span><br />
               PEDIATRIA</button><br /><br />
-            <button><span class="material-symbols-outlined">
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
               nutrition
               </span><br/>
                 NUTRIÇÃO</button>
-            <button><span class="material-symbols-outlined">
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
               woman
               </span><br />
               GINECOLOGIA</button>
-          </div>
+            </div>
           <div class="session-2">
-            <button><span class="material-symbols-outlined">
-              stethoscope
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              ophthalmology
               </span><br />
               OFTAMOLOGIA </button>
-            <button><span class="material-symbols-outlined">
-              child_care
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              neurology
               </span><br />
               NEUROCIRURGIA</button><br /><br />
-            <button><span class="material-symbols-outlined">
-              nutrition
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              cognition
               </span><br/>
                PSIQUIATRIA</button>
-            <button><span class="material-symbols-outlined">
-              woman
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              man_4
               </span><br />
               UROLOGIA</button>
           </div>
           <div class="session-3">
-            <button><span class="material-symbols-outlined">
-              stethoscope
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              ecg_heart
               </span><br />
               CARDIOLOGIA</button>
-            <button><span class="material-symbols-outlined">
-              child_care
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
+              immunology
               </span><br />
               ALERGOLOGIA</button><br /><br />
-            <button><span class="material-symbols-outlined">
-              nutrition
+            <button style="font-size: 3.5vh; font-weight: 700;""><span class="material-symbols-outlined">
+              gastroenterology
               </span><br/>
-               GASTRO<br />ENTEROLOGIA</button>
-            <button><span class="material-symbols-outlined">
+               GASTROENTEROLOGIA</button>
+            <button style="font-size: 3.5vh; font-weight: 700;"><span class="material-symbols-outlined">
               woman
               </span><br />
-              DERMATOLOGISTA</button>
+              DERMATOLOGIA</button>
           </div>
         </div>
 
+      </div>
+      <div class="balls">
+        <div id="ball-1">a</div>
+        <div id="ball-2"></div>
+        <div id="ball-3"></div>
       </div>
     </div>
 
