--- a/src/laddingPAGE/Ladding.html
+++ b/src/laddingPAGE/Ladding.html
@@ -172,7 +172,7 @@
 
       </div>
       <div class="balls">
-        <div id="ball-1">a</div>
+        <div id="ball-1"></div>
         <div id="ball-2"></div>
         <div id="ball-3"></div>
       </div>
