--- a/src/loginPage/Login.html
+++ b/src/loginPage/Login.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+Ahom&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -107,6 +107,7 @@
             placeholder="Senha:"
             required
           />
+          <span class="lnr lnr-eye"></span>
         </div>
         <a href="../singUpPage/singUp.html">Ainda não se inscreveu ?</a>
 
