--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -32,6 +32,9 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -94,16 +97,20 @@
             name="password"
             id="password"
             placeholder="Senha:"
+            required
           />
+          <span class="lnr lnr-eye"></span>
         </div>
         <div class="icons">
           <span class="material-symbols-outlined"> lock </span>
           <input
             type="password"
             name="password"
-            id="passwordConfirm"
+            id="password"
             placeholder="Confirme sua senha:"
+            required
           />
+          <span class="lnr lnr-eye"></span>
         </div>
         <a href="../loginPage/Login.html">Já tem uma conta ? Faça login !</a>
 
