--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -138,9 +138,9 @@
             </div>
             <div id="L-2-form">
               <label for="">CEP:</label><br />
-              <input type="text" placeholder="Digite o seu CEP:"/><br />
+              <input type="text"  id="CEP" placeholder="Digite o seu CEP:"/><br />
               <label for="">Cidade:</label><br />
-              <input type="text" placeholder="Digite o nome da sua cidade:"/><br />
+              <input type="text" id="cidade" placeholder="Digite o nome da sua cidade:"/><br />
               <label for="">Bairro:</label><br />
               <input type="text" placeholder="Digite o nome do seu bairro:"/><br />
               <label for="">Rua:</label><br />
