--- a/src/consultsPages/dados_User/dados_User.html
+++ b/src/consultsPages/dados_User/dados_User.html
@@ -115,7 +115,7 @@
               <label for="">Nome do paciente:</label><br />
               <input type="text" id="Nome" placeholder="Digite o nome do paciente:"/><br />
               <label for="">Registro geral (RG):</label><br />
-              <input type="text" id="RG" placeholder="Digite seu RG:"/><br />
+              <input type="text" id="RG" maxlength="12" placeholder="Digite seu RG:"/><br />
               <label for="" >Cadastro de pessoa física (CPF):</label><br />
               <input type="text" id="CPF" maxlength="14" placeholder="Digite seu CPF:"/><br />
               <label for="">Telefone:</label><br />
