Update in any Screens

--- a/src/consultsPages/horario_User/horarios_User.html
+++ b/src/consultsPages/horario_User/horarios_User.html
@@ -68,16 +68,16 @@
       <div id="menu-lateral">
         <div>
           <a href="#" onclick="toggleMenu(false)"
-            ><img src="../../../assets/pngwing.com.png" alt="Return"
+            ><img src="../../assets/pngwing.com.png" alt="Return"
           /></a>
           <hr />
-          <a href="#"><strong>Sobre nós</strong></a>
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
           <hr />
-          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
           <hr />
-          <a href="#"><strong>Contato</strong></a>
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
-          <img src="../../../assets/Mais Brasil Logo.png" alt="Logo" />
+          <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
       </div>
     </div>
