--- a/src/crudPAC/crud_PAC.html
+++ b/src/crudPAC/crud_PAC.html
@@ -78,11 +78,11 @@
               <option value="Serviços">Serviços</option>
             </select>
           </div>
-          <button type="submit" id="btn_ADICIONAR">+ ADICIONAR</button>
       </div>
         <div class="crud-PAC">
           <div>
             <table class="table">
+              <form id="formPaciente">
               <tr id="mains-tr">
                 <td>CPF</td>
                 <td>RG</td>
@@ -99,66 +99,23 @@
                 <td>AÇÃO</td>
               </tr>
               <tr>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
+                <td class="td-main"><input type="text" id="cpf"></td>
+                <td class="td-main"><input type="text" id="rg"></td>
+                <td class="td-main"><input type="date" id="dataNascimento"></td>
+                <td class="td-main"><input type="text" id="nome"></td>
+                <td class="td-main"><input type="text" id="numeroCasa"></td>
+                <td class="td-main"><input type="text" id="rua"></td>
+                <td class="td-main"><input type="text" id="bairro"></td>
+                <td class="td-main"><input type="text" id="cidade"></td>
+                <td class="td-main"><input type="text" id="cep"></td>
+                <td class="td-main"><input type="text" id="telefone"></td>
+                <td class="td-main"><input type="text" id="consulta"></td>
                 <td class="td-main"><a href="#">ATUALIZAR</td>
                 <td class="td-main"><a href="#">EXCLUIR</a></td>
-              </tr>
-              <tr>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
-              </tr>
-              <tr>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
-              </tr>
-              <tr>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="date"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><input type="text"></td>
-                <td class="td-main"><a href="#">ATUALIZAR</td>
-                <td class="td-main"><a href="#">EXCLUIR</a></td>
+                <input type="submit" value="+ ADICIONAR" id="btnADC">
               </tr>
             </table>
+          </form>
           </div>
         </div>
         </div>
