--- a/src/singUpPage/singUp.html
+++ b/src/singUpPage/singUp.html
@@ -71,11 +71,11 @@
             ><img src="../../assets/pngwing.com.png" alt="Return"
           /></a>
           <hr />
-          <a href="#"><strong>Sobre nós</strong></a>
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Sobre nós</strong></a>
           <hr />
-          <a href="#"><strong>Trabalhe conosco</strong></a>
+          <a href="../TrabalheConosco/TrabalheConosco.html" target="_blank"><strong>Trabalhe conosco</strong></a>
           <hr />
-          <a href="#"><strong>Contato</strong></a>
+          <a href="../ContateNos/ContateNos.html" target="_blank"><strong>Contato</strong></a>
           <hr />
           <img src="../../assets/Mais Brasil Logo.png" alt="Logo" />
         </div>
